--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
-        <img src="./assets/images/background-pattern-desktop.svg" />
+        <picture>
+            <source media="(min-width: 375px)" srcset="./assets/images/background-pattern-desktop.svg" />
+            <img src="./assets/images/background-pattern-mobile.svg" />
+        </picture>
         <article>
             <div class="header">
                 <span class="icon_container star_icon">
